--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pyside6~=6.6.1
-yaml~=0.2.5
-pyyaml~=6.0.1
-requests~=2.31.0
-opencv-python~=4.9.0.80
-numpy~=1.26.3
-openai~=1.9.0
-torch~=2.1.2
+pyside6
+yaml
+pyyaml
+requests
+opencv-python
+numpy
+openai
+torch
+python-dotenv
+onnxruntime
